--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <img src="./src/Laranja-refrigerante-foregroundBlur.png" class="fruit">
             <img src="./src/Laranja-refrigerante.png" class="refri">
         </div>
-        <div class="item hidden" style="--background: #2d5643">
+        <div class="item" style="--background: #2d5643">
             <div class="title">Abacate</div>
             <img src="./src/Abacate-refrigerante-foregroundBlur.png" class="fruit">
             <img src="./src/Abacate-refrigerante.png" class="refri">
         </div>
-        <div class="arrows">
+        <div class="arrow">
             <button id="prev"> < </button>
             <button id="next"> > </button>
         </div>
     </main>
 </body>
-
+<script src="./scripts.js"></script>
 </html>
